[project]
name = "financepy"
version = "1.0.2"
description = "A Finance Securities Valuation Library"
readme = "README.md"

# Python compatibility must match NumPy / SciPy reality
requires-python = ">=3.10,<3.13"

dependencies = [
    "numpy>=1.26,<2.1",
    "scipy>=1.11,<1.14",
    "pandas>=2.1,<2.3",
    "matplotlib>=3.8,<3.9",
    "numba>=0.59,<0.63",
    "llvmlite>=0.42,<0.45",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.25,<9",
    "mypy>=1.13,<2",
    "typing-extensions>=4.12,<5",
]

test = [
    "pytest>=8,<9",
    "pytest-benchmark>=4,<5",
    "more-itertools>=10,<11",
]
